--- a/src/app/basic/components/nav-bar/nav-bar.component.html
+++ b/src/app/basic/components/nav-bar/nav-bar.component.html
@@ -6,7 +6,7 @@
           <a [routerLink]="link.path" (click)="toggleSidebar()">{{ link.label }}</a>
         </li>
       </ul>
-      <img src="/assets/images/ralph.sites.png" alt="Logo" class="logo">
+      <a href="#"><img src="/assets/images/ralph.sites.png" alt="Logo" class="logo"></a>
       <button class="menu-btn" (click)="toggleSidebar()">&#9776;</button>
     </nav>
   </div>
