--- a/src/app/basic/components/nav-bar/nav-bar.component.html
+++ b/src/app/basic/components/nav-bar/nav-bar.component.html
@@ -3,18 +3,22 @@
     <nav class="navbar">
       <ul class="navbar-links">
         <li *ngFor="let link of navLinks">
-          <a [routerLink]="link.path" (click)="closeSidebar()">{{ link.label }}</a>
+          <a [routerLink]="link.path">{{ link.label }}</a>
         </li>
       </ul>
       <a href="#"><img src="/assets/images/ralph.sites.png" alt="Logo" class="logo"></a>
-      <button class="menu-btn" (click)="toggleSidebar()">&#9776;</button>
+      <button class="menu-btn" [ngClass]="{'open': isSidebarOpen}" (click)="toggleSidebar()">
+        <div class="line line-1"></div>
+        <div class="line line-2"></div>
+        <div class="line line-3"></div>
+      </button>
     </nav>
   </div>
   <div class="overlay" *ngIf="isSidebarOpen" (click)="closeSidebar()"></div>
   <aside class="sidebar" [ngClass]="{'open': isSidebarOpen}">
     <ul class="navbar-links">
       <li *ngFor="let link of navLinks">
-        <a [routerLink]="link.path" (click)="closeSidebar()">{{ link.label }}</a>
+        <a [routerLink]="link.path">{{ link.label }}</a>
       </li>
     </ul>
   </aside>
