--- a/src/app/basic/pages/home-page/home-page.component.html
+++ b/src/app/basic/pages/home-page/home-page.component.html
@@ -1,3 +1,8 @@
 <div class="container">
-  <p>home-page works!</p>
+  <div class="titulo">
+    <h1>Hola Mundo</h1>
+  </div>
+  <div class="video">
+    <video class="video-background" src="/assets/videos/video.mp4" autoplay muted loop></video>
+  </div>
 </div>
