--- a/src/app/basic/pages/home-page/home-page.component.html
+++ b/src/app/basic/pages/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="titulo">
-    <h1>Hola Mundo</h1>
+    <h1 id="texto-maquina">Hola Mundo</h1>
   </div>
   <div class="video">
     <video class="video-background" src="/assets/videos/video.mp4" autoplay muted loop></video>
