--- a/src/app/basic/pages/home-page/home-page.component.css
+++ b/src/app/basic/pages/home-page/home-page.component.css
@@ -5,24 +5,24 @@
   margin: 0 auto;
   padding: 20px 0;
   overflow: hidden;
-  height: 500px;
+  height: 100vh; /* Asegura que el contenedor ocupe toda la altura de la pantalla */
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-/* estilos video fondo */
+/* Estilos para el video de fondo */
 .video-background {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh; /* Asegura que el video cubra toda la altura de la pantalla */
   object-fit: cover;
-  transform: translate(-50%, -50%);
   z-index: -1;
   opacity: 0.5;
 }
+
 
 /* estilos titulo */
 .titulo {
