--- a/src/app/basic/pages/home-page/home-page.component.css
+++ b/src/app/basic/pages/home-page/home-page.component.css
@@ -5,19 +5,19 @@
   margin: 0 auto;
   padding: 20px 0;
   overflow: hidden;
-  height: 100vh; /* Asegura que el contenedor ocupe toda la altura de la pantalla */
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-/* Estilos para el video de fondo */
+/* estilos para el video de fondo */
 .video-background {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh; /* Asegura que el video cubra toda la altura de la pantalla */
+  height: 100vh;
   object-fit: cover;
   z-index: -1;
   opacity: 0.5;
