creacion del footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <!-- Nav - Bar -->
  <basic-nav-bar>s</basic-nav-bar>
  <router-outlet></router-outlet>
+
+ <!-- Footer -->
+  <basic-footer></basic-footer>
