--- a/src/app/basic/pages/home-page/home-page.component.css
+++ b/src/app/basic/pages/home-page/home-page.component.css
@@ -11,32 +11,16 @@
   justify-content: center;
 }
 
-/* estilos para el video de fondo */
-.video-background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  object-fit: cover;
-  z-index: -1;
-  opacity: 0.5;
-}
-
-
 /* estilos titulo */
 .titulo {
-  position: relative;
-  z-index: 1;
   text-align: center;
   color: white;
 }
 
 .titulo h1 {
-  color: #fff;
+  color: #000;
   font-size: 36px;
   font-weight: 300;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.9);
 }
 
 @media (max-width: 800px) {
