--- a/src/app/basic/components/nav-bar/nav-bar.component.css
+++ b/src/app/basic/components/nav-bar/nav-bar.component.css
@@ -9,7 +9,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 0 30px;
-  background-color: #121212;
+  background-color: #1E1E1E;
   color: white;
   font-size: 12px;
   height: 50px;
