cambio de rutas

--- a/src/app/basic/components/footer/footer.component.html
+++ b/src/app/basic/components/footer/footer.component.html
@@ -5,17 +5,16 @@
   <div class="footer-section">
     <h3>Contact</h3>
     <ul>
-      <li>Email: <a href="mailto:outlook@example.com">outlook&commat;example.com</a></li>
-      <li>Email: <a href="mailto:gmail@example.com">gmail&commat;example.com</a></li>
+      <li><a href="mailto:outlook@example.com">rleos1802&commat;outlook.com</a></li>
     </ul>
   </div>
   <div class="footer-section">
     <h3>Menu</h3>
     <ul>
-      <li><a [routerLink]="['/basic/home']">Home</a></li>
-      <li><a [routerLink]="['/basic/services']">Servicios</a></li>
-      <li><a [routerLink]="['/basic/about']">About</a></li>
-      <li><a [routerLink]="['/basic/contact']">Contact</a></li>
+      <li><a [routerLink]="['/basic/home']">Inicio</a></li>
+      <li><a [routerLink]="['/basic/about']">Acerca de</a></li>
+      <li><a [routerLink]="['/basic/portfolio']">Portafolio</a></li>
+      <li><a [routerLink]="['/basic/contact']">Contacto</a></li>
     </ul>
   </div>
   <div class="footer-section">
