--- a/src/app/basic/pages/home-page/home-page.component.html
+++ b/src/app/basic/pages/home-page/home-page.component.html
@@ -1,5 +1,3 @@
 <div class="container">
-  <div class="titulo">
-    <h1 id="texto-maquina">Hola Mundo</h1>
-  </div>
+  <p>home-page works!</p>
 </div>
