--- a/src/app/basic/components/footer/footer.component.html
+++ b/src/app/basic/components/footer/footer.component.html
@@ -1,29 +1,34 @@
 <div class="footer">
-  <div class="logo">
-    <img src="/assets/images/ralph.sites.png" alt="Logo">
+  <img class="logotipo" src="/assets/images/r.leos.png" alt="">
+  <h3>Menu</h3>
+  <div class="menu">
+    <a [routerLink]="['/basic/home']">Inicio</a>
+    <a [routerLink]="['/basic/about']">Acerca de</a>
+    <a [routerLink]="['/basic/portfolio']">Portafolio</a>
+    <a [routerLink]="['/basic/contact']">Contacto</a>
   </div>
-  <div class="footer-section">
-    <h3>Contact</h3>
-    <ul>
-      <li><a href="mailto:outlook@example.com">rleos1802&commat;outlook.com</a></li>
-    </ul>
-  </div>
-  <div class="footer-section">
-    <h3>Menu</h3>
-    <ul>
-      <li><a [routerLink]="['/basic/home']">Inicio</a></li>
-      <li><a [routerLink]="['/basic/about']">Acerca de</a></li>
-      <li><a [routerLink]="['/basic/portfolio']">Portafolio</a></li>
-      <li><a [routerLink]="['/basic/contact']">Contacto</a></li>
-    </ul>
-  </div>
-  <div class="footer-section">
-    <h3>Social Media</h3>
-    <ul>
-      <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
-      <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
-      <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
-    </ul>
+  <h3>Redes sociales</h3>
+  <div class="redes">
+    <a href="#" target="_blank">
+      <img src="/assets/images/in-black.png" alt="" class="social-icon color">
+      <img src="/assets/images/in-color.png" alt="" class="social-icon hover">
+    </a>
+    <a href="#" target="_blank">
+      <img src="/assets/images/gh-black.png" alt="" class="social-icon color">
+      <img src="/assets/images/gh-color.png" alt="" class="social-icon hover">
+    </a>
+    <a href="#" target="_blank">
+      <img src="/assets/images/ig-black.png" alt="" class="social-icon color">
+      <img src="/assets/images/ig-color.png" alt="" class="social-icon hover">
+    </a>
+    <a href="#" target="_blank">
+      <img src="/assets/images/x-black.png" alt="" class="social-icon color">
+      <img src="/assets/images/x-color.png" alt="" class="social-icon hover">
+    </a>
+    <a href="#" target="_blank">
+      <img src="/assets/images/dc-black.png" alt="" class="social-icon color">
+      <img src="/assets/images/dc-color.png" alt="" class="social-icon hover">
+    </a>
   </div>
 </div>
 
