--- a/src/app/basic/components/nav-bar/nav-bar.component.html
+++ b/src/app/basic/components/nav-bar/nav-bar.component.html
@@ -6,7 +6,7 @@
           <a [routerLink]="link.path">{{ link.label }}</a>
         </li>
       </ul>
-      <a href="#"><img src="/assets/images/ralph.sites.png" alt="Logo" class="logo"></a>
+      <a href="#"><img src="/assets/images/r.leos.png" alt="Logo" class="logo"></a>
       <button class="menu-btn" [ngClass]="{'open': isSidebarOpen}" (click)="toggleSidebar()">
         <div class="line line-1"></div>
         <div class="line line-2"></div>
