--- a/src/app/basic/components/skills/skills.component.html
+++ b/src/app/basic/components/skills/skills.component.html
@@ -1,12 +1,139 @@
-<div class="container">
+<div class="container-first">
+  <div class="presentation">
+    <div class="card">
+      <img class="perfilPicture" src="/assets/images/pp.jpg" alt="Perfil de Axel Leos">
+      <div class="text">
+        <h1 class="greetings">Hola 👋🏽 soy</h1>
+        <h2 class="name">Axel Leos</h2>
+        <p class="career">ISC | Front-End Developer</p>
+      </div>
+    </div>
+    <div class="buttons">
+      <button class="talkToMe">Escríbeme <img src="/assets/images/mensaje.png"></button>
+      <button class="cv">Descargar CV <img src="/assets/images/download.png"></button>
+    </div>
+    <div class="contact">
+      <a href="#" target="_blank">
+        <img src="/assets/images/in-black.png" alt="" class="social-icon color">
+        <img src="/assets/images/in-color.png" alt="" class="social-icon hover">
+      </a>
+      <a href="#" target="_blank">
+        <img src="/assets/images/gh-black.png" alt="" class="social-icon color">
+        <img src="/assets/images/gh-color.png" alt="" class="social-icon hover">
+      </a>
+      <a href="#" target="_blank">
+        <img src="/assets/images/ig-black.png" alt="" class="social-icon color">
+        <img src="/assets/images/ig-color.png" alt="" class="social-icon hover">
+      </a>
+      <a href="#" target="_blank">
+        <img src="/assets/images/x-black.png" alt="" class="social-icon color">
+        <img src="/assets/images/x-color.png" alt="" class="social-icon hover">
+      </a>
+      <a href="#" target="_blank">
+        <img src="/assets/images/dc-black.png" alt="" class="social-icon color">
+        <img src="/assets/images/dc-color.png" alt="" class="social-icon hover">
+      </a>
+    </div>
 
-  <div class="presentacion">
-
-    <div class="perfil"></div>
-    <div class="saludo"></div>
 
   </div>
 
-  <div class="skills"></div>
+  <div class="experience">
+    <h3 class="title">Experiencia</h3>
 
+    <div class="recent">
+      <div class="label">
+        <p>Más reciente</p>
+      </div>
+      <div class="position">
+        <p class="date">Actualidad</p>
+        <p class="isc">Diseñador Web - Emprendimiento</p>
+        <p class="location">ralph.sites, Monterrey, NLE</p>
+      </div>
+
+      <div class="task">
+        <ul>
+          <li>Diseño de páginas web personalizadas para clientes.</li>
+          <li>Desarrollo de sitios web responsivos y optimizados.</li>
+          <li>Implementación de SEO y mejoras de rendimiento web.</li>
+          <li>Creación de prototipos para interfaces de usuario.</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="second">
+      <div class="position">
+        <p class="date">Noviembre 2023 - Actualidad</p>
+        <p class="isc">Técnico de Sistemas</p>
+        <p class="location">Vivipost, Monterrey, NLE</p>
+      </div>
+
+      <div class="task">
+        <ul>
+          <li>Soporte técnico general.</li>
+          <li>Gestión de redes alámbricas e inalámbricas.</li>
+          <li>Instalación de equipos de cómputo y SO.</li>
+          <li>Instalación de CCTV, Routers, Switches.</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="second">
+      <div class="position">
+        <p class="date">Noviembre 2021 - Septiembre 2023</p>
+        <p class="isc">Líder de Pruebas Funcionales</p>
+        <p class="location">Universal Electronics, Monterrey, NLE</p>
+      </div>
+
+      <div class="task">
+        <ul>
+          <li>Planificación y supervisión de planes de mantenimiento.</li>
+          <li>Organización de un equipo de trabajo.</li>
+          <li>Control de inventario y equipos.</li>
+          <li>Control de refacciones y compras.</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-second">
+  <div class="education">
+    <div class="engineering">
+      <p class="dateStudies">Septiembre 2021 - Actualidad</p>
+      <p class="ing">Ingeniería en Sistemas Computacionales</p>
+      <p class="university">Universidad Insuco, Apodaca N.L</p>
+    </div>
+
+    <div class="developer">
+      <p class="dateStudies">Actualmente estudiando</p>
+      <p class="ing">Front-End Developer</p>
+      <p class="university">Autodidacta</p>
+    </div>
+  </div>
+
+  <div class="lenguages">
+    <div class="english">
+      <div class="idiom">
+        <p>Inglés</p>
+        <p>B2</p>
+      </div>
+
+      <div class="porcent-container">
+        <p class="porcent-75">75%</p>
+      </div>
+
+    </div>
+    <div class="spanish">
+      <div class="idiom">
+        <p>Español</p>
+        <p>Nativo</p>
+      </div>
+
+      <div class="porcent-container">
+        <p class="porcent-100">100%</p>
+      </div>
+
+    </div>
+  </div>
 </div>
