--- a/src/app/basic/components/footer/footer.component.css
+++ b/src/app/basic/components/footer/footer.component.css
@@ -3,12 +3,13 @@
   margin: auto;
   background-color: #121212;
   padding-top: 20px;
-  border-radius: 15px 15px 0px 0px;
+  border-radius: 10px 10px 0px 0px;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
 
 
 .footer h3 {
@@ -94,7 +95,7 @@
   text-align: center;
   background-color: #121212;
   border-top: 1px solid #2e2e2e;
-  border-radius: 0px 0px 15px 15px;
+  border-radius: 0px 0px 10px 10px;
 }
 
 .dev p {
@@ -122,5 +123,17 @@
   }
   .menu a {
     padding: 20px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .footer {
+    width: 85%;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .dev {
+    width: 85%;
   }
 }
