--- a/src/app/basic/pages/home-page/home-page.component.html
+++ b/src/app/basic/pages/home-page/home-page.component.html
@@ -1,3 +1,5 @@
 <div class="container">
   <basic-skills></basic-skills>
+  <basic-stack></basic-stack>
+  <basic-herramientas></basic-herramientas>
 </div>
