--- a/src/app/basic/components/skills/skills.component.css
+++ b/src/app/basic/components/skills/skills.component.css
@@ -8,6 +8,12 @@
   justify-content: space-between;
 }
 
+h3{
+  font-size: 18px;
+  font-weight: 400;
+  color: #fff;
+}
+
 /* ----------- presentacion ----------- */
 
 .presentation {
