cambio de rutas

--- a/src/app/basic/components/footer/footer.component.css
+++ b/src/app/basic/components/footer/footer.component.css
@@ -94,7 +94,7 @@
   padding-bottom: 20px;
   text-align: center;
   background-color: #121212;
-  border-top: 1px solid #2e2e2e;
+  border-top: 1px solid #1E1E1E;
   border-radius: 0px 0px 10px 10px;
 }
 
