--- a/src/app/basic/components/footer/footer.component.html
+++ b/src/app/basic/components/footer/footer.component.html
@@ -2,8 +2,8 @@
   <img class="logotipo" src="/assets/images/r.leos.png" alt="">
   <h3>Menu</h3>
   <div class="menu">
-    <a [routerLink]="['/basic/home']">Inicio</a>
-    <a [routerLink]="['/basic/about']">Acerca de</a>
+    <a [routerLink]="['/basic/home']">Acerca de</a>
+    <!-- <a [routerLink]="['/basic/about']">Acerca de</a> -->
     <a [routerLink]="['/basic/portfolio']">Portafolio</a>
     <a [routerLink]="['/basic/contact']">Contacto</a>
   </div>
