seccion trabajos terminada

--- a/src/app/basic/components/footer/footer.component.html
+++ b/src/app/basic/components/footer/footer.component.html
@@ -4,7 +4,7 @@
   <div class="menu">
     <a [routerLink]="['/basic/home']">Acerca de</a>
     <!-- <a [routerLink]="['/basic/about']">Acerca de</a> -->
-    <a [routerLink]="['/basic/portfolio']">Portafolio</a>
+    <a [routerLink]="['/basic/portfolio']">Trabajos</a>
     <a [routerLink]="['/basic/contact']">Contacto</a>
   </div>
   <h3>Redes sociales</h3>
