--- a/src/app/basic/pages/portfolio-page/portfolio-page.component.html
+++ b/src/app/basic/pages/portfolio-page/portfolio-page.component.html
@@ -1,3 +1,5 @@
 <div class="container">
-  <p>portfolio-page works!</p>
+  <basic-trabajo></basic-trabajo>
+  <basic-marca></basic-marca>
+  <basic-proximamente></basic-proximamente>
 </div>
