seccion trabajos terminada

--- a/src/app/basic/components/proximamente/proximamente.component.css
+++ b/src/app/basic/components/proximamente/proximamente.component.css
@@ -37,3 +37,15 @@ p {
   border-radius: 10px;
   width: 300px;
 }
+
+
+
+@media only screen and (max-width: 1200px) {
+  h3  {
+    font-size: 18px;
+  }
+
+  p {
+    font-size: 14px;
+  }
+}
