--- a/src/app/basic/components/skills/skills.component.html
+++ b/src/app/basic/components/skills/skills.component.html
@@ -9,27 +9,33 @@
       </div>
     </div>
     <div class="buttons">
-      <button class="talkToMe">Escríbeme <img src="/assets/images/mensaje.png"></button>
-      <button class="cv">Descargar CV <img src="/assets/images/download.png"></button>
+      <a href="https://wa.link/kwbkbg" target="_blank">
+        <button class="talkToMe">
+            Escríbeme
+        </button>
+    </a>
+    <a href="/assets/cv/CV - Ricardo Axel Leos Flores - DEV - ES-EN.pdf" download="Mi_CV.pdf">
+      <button class="cv">Descargar CV</button>
+  </a>
     </div>
     <div class="contact">
-      <a href="#" target="_blank">
+      <a href="https://www.linkedin.com/in/ricardo-leos-624bb8267/" target="_blank">
         <img src="/assets/images/in-black.png" alt="" class="social-icon color">
         <img src="/assets/images/in-color.png" alt="" class="social-icon hover">
       </a>
-      <a href="#" target="_blank">
+      <a href="https://github.com/ralph1802" target="_blank">
         <img src="/assets/images/gh-black.png" alt="" class="social-icon color">
         <img src="/assets/images/gh-color.png" alt="" class="social-icon hover">
       </a>
-      <a href="#" target="_blank">
+      <a href="https://www.instagram.com/rleos.23?igsh=eHppb2s3eG1weHR0&utm_source=qr" target="_blank">
         <img src="/assets/images/ig-black.png" alt="" class="social-icon color">
         <img src="/assets/images/ig-color.png" alt="" class="social-icon hover">
       </a>
-      <a href="#" target="_blank">
+      <a href="https://x.com/subject1802" target="_blank">
         <img src="/assets/images/x-black.png" alt="" class="social-icon color">
         <img src="/assets/images/x-color.png" alt="" class="social-icon hover">
       </a>
-      <a href="#" target="_blank">
+      <a href="https://discord.gg/GspcGm33" target="_blank">
         <img src="/assets/images/dc-black.png" alt="" class="social-icon color">
         <img src="/assets/images/dc-color.png" alt="" class="social-icon hover">
       </a>
@@ -106,10 +112,17 @@
       <p class="university">Universidad Insuco, Apodaca N.L</p>
     </div>
 
+
     <div class="developer">
       <p class="dateStudies">Actualmente estudiando</p>
       <p class="ing">Front-End Developer</p>
       <p class="university">Autodidacta</p>
+    </div>
+
+    <div class="engineering">
+      <p class="dateStudies">2015 - 2018</p>
+      <p class="ing">Técnico Mecatrónica Industrial</p>
+      <p class="university">Escuela Industrial Álvaro Obregón, EIAO, San Nicolás</p>
     </div>
   </div>
 
