--- a/src/app/basic/components/footer/footer.component.html
+++ b/src/app/basic/components/footer/footer.component.html
@@ -5,27 +5,27 @@
     <a [routerLink]="['/basic/home']">Acerca de</a>
     <!-- <a [routerLink]="['/basic/about']">Acerca de</a> -->
     <a [routerLink]="['/basic/portfolio']">Trabajos</a>
-    <a [routerLink]="['/basic/contact']">Contacto</a>
+    <!-- <a [routerLink]="['/basic/contact']">Contacto</a> -->
   </div>
   <h3>Redes sociales</h3>
   <div class="redes">
-    <a href="#" target="_blank">
+    <a href="https://www.linkedin.com/in/ricardo-leos-624bb8267/" target="_blank">
       <img src="/assets/images/in-black.png" alt="" class="social-icon color">
       <img src="/assets/images/in-color.png" alt="" class="social-icon hover">
     </a>
-    <a href="#" target="_blank">
+    <a href="https://github.com/ralph1802" target="_blank">
       <img src="/assets/images/gh-black.png" alt="" class="social-icon color">
       <img src="/assets/images/gh-color.png" alt="" class="social-icon hover">
     </a>
-    <a href="#" target="_blank">
+    <a href="https://www.instagram.com/rleos.23?igsh=eHppb2s3eG1weHR0&utm_source=qr" target="_blank">
       <img src="/assets/images/ig-black.png" alt="" class="social-icon color">
       <img src="/assets/images/ig-color.png" alt="" class="social-icon hover">
     </a>
-    <a href="#" target="_blank">
+    <a href="https://x.com/subject1802" target="_blank">
       <img src="/assets/images/x-black.png" alt="" class="social-icon color">
       <img src="/assets/images/x-color.png" alt="" class="social-icon hover">
     </a>
-    <a href="#" target="_blank">
+    <a href="https://discord.gg/GspcGm33" target="_blank">
       <img src="/assets/images/dc-black.png" alt="" class="social-icon color">
       <img src="/assets/images/dc-color.png" alt="" class="social-icon hover">
     </a>
