--- a/src/app/basic/components/skills/skills.component.css
+++ b/src/app/basic/components/skills/skills.component.css
@@ -215,13 +215,14 @@ h3{
   width: 100%;
   height: auto;
   display: flex;
-  justify-content: space-between;
+gap: 10px;
+
 }
 
 
 /* ----------- lenguages ----------- */
 .lenguages {
-  width: 25%;
+  width: 29%;
   height: auto;
   display: flex;
   justify-content: space-between;
@@ -262,10 +263,10 @@ h3{
 
 /* ----------- education ----------- */
 .education {
-  width: 74%;
+  width: 70%;
   height: auto;
   display: flex;
-  justify-content: space-between;
+  gap: 10px;
   color: #fff;
   font-size: 14px;
   font-weight: 300;
@@ -281,7 +282,6 @@ h3{
 }
 
 .engineering {
-  width: 50%;
   height: auto;
   background: #121212;
   border-radius: 10px;
@@ -293,7 +293,6 @@ h3{
 }
 
 .developer {
-  width: 49%;
   height: auto;
   background: #121212;
   border-radius: 10px;
@@ -311,7 +310,7 @@ h3{
 
 
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1290px) {
   /* ----------- contenedor primero ----------- */
   .container-first{
     flex-direction: column;
